# fastapi-logging-framework

./: .gitignore  README.md  ci  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
src/: logger.py  stackdriver.py
src/fastapi_logging_framework/: __init__.py
tests/unit/: test_logger.py
