  
[metadata]
name=fastapi_logging_framework
# This version much change for pip to actually re-install - be aware if you are updating this library and testing.
version=1.0.0
url=https://github.com/mdryden/fastapi-logging-framework

[options]
include_package_data = True
package_dir=
    = src
packages = find:
python_requires = >= 3.9
install_requires =
    google-cloud-logging==2.6.0
    starlette-context==0.3.3
    wheel

[options.packages.find]
where=src